--- a/index.html
+++ b/index.html
@@ -7,9 +7,53 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
-    <div class="container">
-        <h1>hello</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis asperiores ipsum exercitationem deserunt tempore quaerat quos voluptatum dolore? Repellendus iste nulla commodi sapiente facilis, in obcaecati animi inventore aperiam eveniet?</p>
-    <p class="maj">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis asperiores ipsum exercitationem deserunt tempore quaerat quos voluptatum dolore? Repellendus iste nulla commodi sapiente facilis, in obcaecati animi inventore aperiam eveniet?</p>
+<body>
+    <header>
+        <div class="container">
+            <div class="row align-item-center">
+                <div class="col-3 col-m-6">
+                    <h1 hidden>SM Planners</h1>
+                    <a href="index.html"><img src="img/sm-planners.webp" alt="sm planners" width="134" height="96"></a>
+                </div>
+                <div class="col-9 col-m-6">
+                    <nav>
+                        <ul class="flex">
+                            <li><a href="" class="active">HOME</a></li>
+                            <li><a href="">OUR STORY</a></li>
+                            <li><a href="">BUY NOW</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="banner" role="banner">
+        <div class="container">
+            <div class="grid">
+                <div>
+                    <p class="maj">PLAN YOUR SALE <br> With Us</p>
+                    <a href="">SHOP NOW</a>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="wrap-3">
+        <div class="container">
+            <p class="maj">Great sales people sell Verbs; not Nouns</p>
+        </div>
+    </div>
+    <section class="wrap-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-5"></div>
+                <div class="col-7 col-t-12">
+                    <h2 class="maj">The Daily Structure That <br>
+                        Makes Your Success Inevitable</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <a href="">READ MORE</a>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
 </html>
