--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <div class="col-9 col-m-6">
                     <nav>
                         <ul class="flex">
-                            <li><a href="" class="active">HOME</a></li>
-                            <li><a href="">OUR STORY</a></li>
-                            <li><a href="">BUY NOW</a></li>
+                            <li><a href="index.html" class="active">HOME</a></li>
+                            <li><a href="story.html">OUR STORY</a></li>
+                            <li><a href="shop.html">BUY NOW</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -32,7 +32,7 @@
             <div class="grid">
                 <div>
                     <p class="maj">PLAN YOUR SALE <br> With Us</p>
-                    <a href="">SHOP NOW</a>
+                    <a href="shop.html">SHOP NOW</a>
                 </div>
             </div>
         </div>
@@ -55,5 +55,68 @@
             </div>
         </div>
     </section>
+    <div class="wrap-5">
+        <div class="container">
+            <div class="row">
+                <section class="col-3 col-t-6 col-p-12">
+                    <img src="img/pic1.webp" alt="" width="76" height="70">
+                    <h3 class="maj">Achieve Big <br> Things</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, dolorum quos. Reprehenderit tempore corporis</p>
+                </section>
+                <section class="col-3 col-t-6 col-p-12">
+                    <img src="img/pic1.webp" alt="" width="76" height="70">
+                    <h3 class="maj">Achieve Big <br> Things</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, dolorum quos. Reprehenderit tempore corporis</p>
+                </section>
+                <section class="col-3 col-t-6 col-p-12">
+                    <img src="img/pic1.webp" alt="" width="76" height="70">
+                    <h3 class="maj">Achieve Big <br> Things</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, dolorum quos. Reprehenderit tempore corporis</p>
+                </section>
+                <section class="col-3 col-t-6 col-p-12">
+                    <img src="img/pic1.webp" alt="" width="76" height="70">
+                    <h3 class="maj">Achieve Big <br> Things</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, dolorum quos. Reprehenderit tempore corporis</p>
+                </section>
+            </div>
+        </div>
+    </div>
+    <section class="wrap-6">
+        <div class="container">
+            <h2 class="maj">Take a look</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia illo nam accusantium eum quo obcaecati deleniti, veritatis eligendi laborum perspiciatis ratione repellendus! Excepturi dolorum et quam, at dignissimos nemo. Laboriosam!</p>
+            <div class="video">
+                <iframe src="https://player.vimeo.com/video/957900559?h=33c3290749" width="1170" height="658" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen loading="lazy" title="Iframe"></iframe>
+            </div>
+
+        </div>
+    </section>   
+    <div class="wrap-7">
+        <div class="container">
+            <a href="index.html"><img src="img/sm-planners.webp" alt="sm planners" width="122" height="88"></a>
+            <div class="social">
+                <ul class="flex justify-center">
+                    <li><a href=""><span class="fa fa-facebook"></span></a></li>
+                    <li><a href=""><span class="fa fa-pinterest"></span></a></li>
+                    <li><a href=""><span class="fa fa-linkedin"></span></a></li>
+                    <li><a href=""><span class="fa fa-twitter"></span></a></li>
+                    <li><a href=""><span class="fa fa-rss"></span></a></li>
+                    <li><a href=""><span class="fa fa-instagram"></span></a></li>
+                </ul>
+            </div>
+            <p class="nav">
+                <a href="index.html">Home</a>
+                <a href="">OUR STORY</a>
+                <a href="">BUY NOW</a>
+                <a href="">BUY NOW</a>
+                <a href="">BUY NOW</a>
+            </p>
+        </div>
+    </div>     
+    <footer class="wrap-8">
+        <div class="container">
+            <p>&copy; 2017</p>
+        </div>
+    </footer>     
 </body>
 </html>
